<resources>
    <string name="app_name">Sardines</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="quantity">Quantity</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>

    <string name="color">Colour</string>


</resources>
