<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reveal_frame_layout">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_800"
        android:id="@+id/item_edit_background"
        />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/item_edit_layout"
            >
            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/item_edit_content"
                android:paddingBottom="@dimen/activity_vertical_margin">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/item_edit_layout_header">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Item"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        android:layout_centerVertical="true"
                        android:paddingStart="@dimen/activity_horizontal_margin"/>
                    <ImageButton
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/tick"
                        android:layout_alignParentEnd="true"
                        android:tint="#fff"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:id="@+id/submit_item"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:id="@+id/item_edit_params">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/quantity"
                        app:met_baseColor="@color/editTextColor"
                        app:met_primaryColor="@color/editTextColor"
                        app:met_errorColor="@color/error"
                        app:met_floatingLabel="highlight"
                        app:met_textColorHint="@color/editTextHintColor"
                        android:inputType="number"
                        android:singleLine="true"
                        android:id="@+id/edit_item_quantity"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/length"
                        app:met_baseColor="@color/editTextColor"
                        app:met_primaryColor="@color/editTextColor"
                        app:met_errorColor="@color/error"
                        app:met_floatingLabel="highlight"
                        app:met_textColorHint="@color/editTextHintColor"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:id="@+id/edit_item_length"
                        android:nextFocusDown = "@+id/edit_item_width"
                        app:met_helperText="centimeters"
                        app:met_helperTextColor="@color/editTextHelperColor"
                        />
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:hint="@string/width"
                            app:met_baseColor="@color/editTextColor"
                            app:met_primaryColor="@color/editTextColor"
                            app:met_errorColor="@color/error"
                            app:met_floatingLabel="highlight"
                            app:met_textColorHint="@color/editTextHintColor"
                            android:inputType="numberDecimal"
                            android:singleLine="true"
                            android:id="@+id/edit_item_width"
                            android:layout_marginStart="8dp"
                            android:nextFocusDown= "@+id/edit_item_height"
                            app:met_helperText="centimeters"
                            app:met_helperTextColor="@color/editTextHelperColor"
                            />
                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:hint="@string/height"
                            app:met_baseColor="@color/editTextColor"
                            app:met_primaryColor="@color/editTextColor"
                            app:met_errorColor="@color/error"
                            app:met_floatingLabel="highlight"
                            app:met_textColorHint="@color/editTextHintColor"
                            android:inputType="numberDecimal"
                            android:singleLine="true"
                            android:id="@+id/edit_item_height"
                            android:layout_marginStart="8dp"
                            app:met_helperText="centimeters"
                            app:met_helperTextColor="@color/editTextHelperColor"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/floating_label_text_size"
                        android:text="@string/color"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:paddingEnd="@dimen/activity_horizontal_margin"
                        android:paddingBottom="4dp"
                        android:textColor="@color/editTextColor"/>
                        <android.support.v4.view.ViewPager
                            android:id="@+id/item_color_view_pager"
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            />
                </LinearLayout>
            </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </io.codetail.widget.RevealFrameLayout>